fix: Template dosyalarında düzenlemeler yapıldı

--- a/templates/index.html
+++ b/templates/index.html
@@ -216,12 +216,12 @@
     <a href="/raporlar">Raporlar</a>
     <a href="/oneriler">Müşteri Öneri/Şikayetleri</a>
     <div class="app-toggle">
-      <span class="app-label active" id="biletinialLabel">BiletiniAL</span>
+      <span class="app-label active" id="biletinialLabel">biletinial</span>
       <label class="toggle-switch">
         <input type="checkbox" id="appToggle" onchange="toggleApp()">
         <span class="slider"></span>
       </label>
-      <span class="app-label" id="thinksuiteLabel">ThinkSuite</span>
+      <span class="app-label" id="thinksuiteLabel">thinkSuite</span>
     </div>
   </nav>
 
